cabal-version:      2.4
name:               tiny-mpc
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A tiny monadic parser combinator library.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ishaan Verma
maintainer:         ishaan56verma@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  TinyMPC

    -- Modules included in this library but not exported.
    other-modules:
        ExprParser
        Parsers
        Sexp

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        text
    hs-source-dirs:   src
    default-language: Haskell2010
